# aca-dapr-openai-workshop

./: .gitignore  README.md  aca-dapr-openai-workshop.sln  dapr.yaml
.devcontainer/: devcontainer.json  on-setup.sh
.github/workflows/: brokenlinks.yml  jekyll-gh-pages.yml
dapr/: summarizer-secrets-sample.json
dapr/azure/components/: summarizer-statestore-cosmos.yaml
dapr/local/components/: summarizer-pubsub.yaml  summarizer-secretstore.yaml  summarizer-smtp.yaml  summarizer-statestore.yaml
deploy/containerapps/: apps.bicep  infra.bicep  run-deploy.sh
docs/: Gemfile  _config.yml  index.markdown
docs/_layouts/: default.html
docs/_sass/color_schemes/: lab.scss
docs/lab/1-get-ready/: 1-1-prerequisites.md  1-2-codespaces.md  1-3-connectivity.md  index.md
docs/lab/2-dapr-components/: 2-1-dapr-overview.md  2-2-summarizer-overview.md  2-3-requests-api.md  2-4-blazor-app.md  2-5-requests-processor.md  index.md
docs/lab/3-container-apps/: 3-1-aca-overview.md  3-2-aca-deployment.md  3-3-apps-deployment.md  index.md
docs/lab/4-learn-more/: index.md
infra/: README.md  apps.bicep  infra.bicep  naming-rules.json  parameters.jsonc  run-deploy-app.sh  run-deploy.sh  setup.sh
infra/modules/apps/: requests-api.bicep  (+2 more)
src/job/: Cargo.toml  Dockerfile
src/job/src/: main.rs
src/requests-api/: app.py  request_entities.py  request_state.py  settings.py
src/requests-frontend/: Dockerfile  Frontend.csproj  Program.cs  _Imports.razor
src/requests-processor/: Dockerfile  app.py  request_entities.py  request_handler.py  requirements.txt  settings.py
(+24 files in other folders)
