[package]
name = "job"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_messaging_servicebus = "0.12.0"
chrono = "0.4.26"
dapr = "0.12.0"
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
url = "2.4.0"
uuid = {version ="1.3.4", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
