[package]
name = "job"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_messaging_servicebus = "0.21.0"
chrono = "0.4.39"
dapr = "0.15.1"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
url = "2.5.4"
uuid = {version ="1.13.1", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
